syntax = "proto3";
option java_multiple_files = true;
option java_package = "service.write";


service WriteService {
  rpc write (stream WriteDataRequest) returns (WriteDataResponse);
}

message WriteDataRequest {
  int64  timestamp = 1;
  double energy = 2;

}

message WriteDataResponse {
  string response = 1;
}
